# python-isoxml-writer

./: LICENSE  README.md  example.py  pyproject.toml
src/isoxml_writer/: isoxml.py
src/isoxml_writer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/isoxml_writer/ISOXML_schema/: ISO11783_TaskFile_V4-3.xsd
